--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,17 +15,17 @@
                     "./tokens.css":  "./styles/tokens.css"
                  },
     "peerDependencies":  {
-                            "react":  "^18.2.0 || ^19.0.0",
-                            "react-dom":  "^18.2.0 || ^19.0.0"
+                            "react":  "^18.2.0",
+                            "react-dom":  "^18.2.0"
                          },
     "dependencies":  {
 
                      },
     "devDependencies":  {
                             "typescript":  "^5.6.0",
-                            "@types/react": "^19",
-                            "@types/react-dom": "^19",
-                            "react": "19.2.0",
-                            "react-dom": "19.2.0"
+                            "@types/react": "^18.3.3",
+                            "@types/react-dom": "^18.3.0",
+                            "react": "18.3.1",
+                            "react-dom": "18.3.1"
                         }
 }
